--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -31,7 +31,8 @@ file.reference.mysql-connector-java-8.0.27.jar=..\\..\\..\\Downloads\\mysql-conn
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.mysql-connector-java-8.0.27.jar}
+    ${file.reference.mysql-connector-java-8.0.27.jar}:\
+    ${libs.absolutelayout.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
