--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -27,12 +27,12 @@ dist.dir=dist
 dist.jar=${dist.dir}/project_point_of_sales.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
-file.reference.mysql-connector-java-8.0.27.jar=..\\..\\..\\Downloads\\mysql-connector-java-8.0.27\\mysql-connector-java-8.0.27.jar
+file.reference.mysql-connector-java-8.0.27.jar=C:\\Users\\acer\\Downloads\\mysql-connector-java-8.0.27\\mysql-connector-java-8.0.27.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.mysql-connector-java-8.0.27.jar}:\
-    ${libs.absolutelayout.classpath}
+    ${libs.absolutelayout.classpath}:\
+    ${file.reference.mysql-connector-java-8.0.27.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
