--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -28,11 +28,13 @@ dist.jar=${dist.dir}/project_point_of_sales.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
 file.reference.mysql-connector-java-8.0.27.jar=C:\\Users\\acer\\Downloads\\mysql-connector-java-8.0.27\\mysql-connector-java-8.0.27.jar
+file.reference.mysql-connector-java-8.0.27.jar-1=..\\..\\..\\Downloads\\mysql-connector-java-8.0.27\\mysql-connector-java-8.0.27.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${libs.absolutelayout.classpath}:\
-    ${file.reference.mysql-connector-java-8.0.27.jar}
+    ${file.reference.mysql-connector-java-8.0.27.jar}:\
+    ${file.reference.mysql-connector-java-8.0.27.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
